# TransferWithCommitment

./: .cursorignore  .gitignore  LICENSE  README.md  memo.txt  package.json
.github/workflows/: contracts-ci.yml  pages.yml
contracts/: .gitignore  .slither.config.json  README.md  SPEC.md  TWC_CREATE2.md  foundry.toml  package.json  wagmi.config.ts
contracts/abi/: generated.ts
contracts/cursor_history/: cursor_file_audit_for_vulnerabilities.md
contracts/script/: TransferWithCommitment.s.sol  TransferWithCommitmentCreate2.s.sol
contracts/scripts/: ci-local.sh  slither-report.sh
contracts/src/: Events.sol  ITransferWithCommitment.sol  Structs.sol  TransferWithCommitment.sol
demo/: README.md  index.html  index.ts  package.json  tsconfig.json
docker/: compose.yml
docs/: package.json  tsconfig.json  vocs.config.ts
scripts/: assemble-pages-site.sh  ci-contracts.sh  slither.sh  test-sdk-js-integration.sh  test-sdk-rust-integration.sh
sdk_js/: README.md  SPEC.md  abi.ts  config.ts  package.json  sign.ts  tsconfig.build.json  tsup.config.ts  twcConstants.ts  utils.ts  verify.ts
sdk_react/: README.md  index.ts  package.json  tsconfig.json
sdk_rust/: Cargo.toml
sdk_rust/src/: config.rs  contract.rs  error.rs  events.rs  lib.rs  sign.rs  utils.rs  verify.rs
sdk_rust/src/send_transaction/: mod.rs  self_transfer.rs  signature_transfer.rs
sdk_rust/src/types/: args.rs  mod.rs  signed_data.rs  transfer_detail.rs
sdk_rust/test/integration/: run.sh
sdk_rust/tests/: anvil_integration.rs  provider_chain.rs
sdk_rust/tests/common/: mod.rs
(+202 files in other folders)
